force-app/main/default/objects/Agent_Payout__c/Agent_Payout__c.object-meta.xml
<CustomObject>
    <description>One payment made to a subagent. Records which agent was paid, which payment periods the payment covers, a snapshot of the commission lines that were settled, and how much actually left the account. Commission lines carry a lookup back to this record; a line with a payout is paid, a line without one is not.</description>
    <label>Agent Payout</label>
    <nameField>
        <displayFormat>AP-{YYYYMM}-{0000}</displayFormat>
        <label>Agent Payout #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Payouts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>