force-app/main/default/objects/Agent_Payout__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <description>The money that actually left the account for this payout. Seeded from Payable Amount when the payout is recorded, but freely editable so the recorded figure always matches the real check, transfer, or cash handed over.</description>
    <inlineHelpText>실제로 지급한 금액입니다. 계산된 금액이 자동으로 채워지지만 원하는 대로 고칠 수 있습니다.</inlineHelpText>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>