force-app/main/default/objects/Agent_Payout__c/fields/Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Line_Count__c</fullName>
    <description>How many commission lines were stamped with this payout at the moment it was recorded. A snapshot, not a live count.</description>
    <inlineHelpText>이 지급으로 정산된 커미션 라인 수입니다. 기록 시점의 스냅샷입니다.</inlineHelpText>
    <label>Line Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>