force-app/main/default/objects/Agent_Payout__c/fields/Lines_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lines_Net_Amount__c</fullName>
    <description>Sum of Commission Amount across every line stamped with this payout. This is what the carrier paid K2 on those lines, chargebacks included, before the agent rate is applied.</description>
    <inlineHelpText>캐리어가 K2에 지급한 순액입니다. 차지백이 이미 반영되어 있습니다. 에이전트에게 지급한 금액이 아닙니다.</inlineHelpText>
    <label>Lines Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>