force-app/main/default/objects/Agent_Payout__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Free note about this payout. Required when the status is set to Voided, so every cancelled payout carries its reason.</description>
    <inlineHelpText>이 지급에 대한 메모입니다. 지급을 취소(Voided)할 때는 반드시 사유를 적어야 합니다.</inlineHelpText>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>