force-app/main/default/objects/Agent_Payout__c/fields/Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The date the payment was made. Defaults to today, but should be changed to the real payment date when an older payout is being entered after the fact.</description>
    <inlineHelpText>실제로 지급한 날짜입니다. 오늘 날짜가 기본으로 들어가며, 과거 지급을 입력할 때는 실제 날짜로 바꾸세요.</inlineHelpText>
    <label>Paid Date</label>
    <type>Date</type>
</CustomField>