force-app/main/default/objects/Agent_Payout__c/fields/Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payable_Amount__c</fullName>
    <description>Sum of Commission Amount times the policy commission rate, across the stamped lines that actually have a rate on the policy. Lines whose policy has no rate contribute nothing here and are reported under Unrated Line Count instead.</description>
    <inlineHelpText>폴리시 요율을 적용해 계산한 지급 대상 금액입니다. 요율이 없는 라인은 여기에 포함되지 않습니다.</inlineHelpText>
    <label>Payable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>