force-app/main/default/objects/Agent_Payout__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>How the money was sent. Optional, but filling it in makes the payment easy to trace against a bank statement later.</description>
    <inlineHelpText>어떤 방법으로 지급했는지 선택하세요. 나중에 은행 내역과 대조할 때 도움이 됩니다.</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Zelle</fullName>
            </value>
            <value>
                <fullName>ACH / Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>