force-app/main/default/objects/Agent_Payout__c/fields/Period_End__c.field-meta.xml
<CustomField>
    <fullName>Period_End__c</fullName>
    <description>Last payment period this payout covers, in YYYY-MM, inclusive. Use the same value as Period Start for a single-month payout.</description>
    <inlineHelpText>YYYY-MM 형식으로 입력하세요 (예: 2026-06). 마지막 달도 포함됩니다. 한 달만 지급하면 시작 기간과 같은 값을 넣으세요.</inlineHelpText>
    <label>Period End</label>
    <length>7</length>
    <type>Text</type>
</CustomField>