force-app/main/default/objects/Agent_Payout__c/fields/Period_Label__c.field-meta.xml
<CustomField>
    <fullName>Period_Label__c</fullName>
    <description>Read-only display of the covered period range. Shows a single month when Period Start and Period End are the same, otherwise start and end joined by a tilde.</description>
    <formula>IF(
  OR( ISBLANK(Period_Start__c), ISBLANK(Period_End__c) ),
  NULL,
  IF(
    Period_Start__c = Period_End__c,
    Period_Start__c,
    Period_Start__c &amp; &quot; ~ &quot; &amp; Period_End__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>지급이 커버하는 기간입니다. 자동 계산되며 수정할 수 없습니다.</inlineHelpText>
    <label>Period</label>
    <type>Text</type>
</CustomField>