force-app/main/default/objects/Agent_Payout__c/fields/Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_Start__c</fullName>
    <description>First payment period this payout covers, in YYYY-MM. Together with Period End it declares the covered range, so a commission line that arrives later inside this range can be flagged as a late arrival.</description>
    <inlineHelpText>YYYY-MM 형식으로 입력하세요 (예: 2026-01). 이 지급이 커버하는 첫 달입니다.</inlineHelpText>
    <label>Period Start</label>
    <length>7</length>
    <type>Text</type>
</CustomField>