force-app/main/default/objects/Agent_Payout__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Paid means this payout stands and the periods it covers are settled. Voided means it was entered by mistake or reversed; a voided payout no longer covers its periods and its lines go back to unpaid. A note explaining the reason is required to void.</description>
    <inlineHelpText>Paid는 정상 지급입니다. Voided로 바꾸면 이 지급은 취소되고, 묶여 있던 라인은 다시 미지급으로 돌아갑니다. 취소하려면 메모에 사유를 적어야 합니다.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
                <default>true</default>
                <label>Paid</label>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>