force-app/main/default/objects/Agent_Payout__c/fields/Unrated_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Unrated_Line_Count__c</fullName>
    <description>How many of the stamped lines had no commission rate on their policy, so their payable amount could not be computed. They are still settled by this payout.</description>
    <inlineHelpText>폴리시에 Commission Rate가 없어 금액을 계산할 수 없었던 라인 수입니다.</inlineHelpText>
    <label>Unrated Line Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>