force-app/main/default/objects/Agent_Payout__c/validationRules/Agent_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Agent_Required</fullName>
    <active>true</active>
    <description>A payout has to name the agent it was paid to.</description>
    <errorConditionFormula>ISBLANK(Agent__c)</errorConditionFormula>
    <errorDisplayField>Agent__c</errorDisplayField>
    <errorMessage>Select the agent this payout was paid to.</errorMessage>
</ValidationRule>