force-app/main/default/objects/Agent_Payout__c/validationRules/Period_End_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Period_End_Format</fullName>
    <active>true</active>
    <description>Period End must be a real year-month so the covered range can be compared as text.</description>
    <errorConditionFormula>NOT( REGEX(Period_End__c, &quot;20\\d\\d-(0[1-9]|1[0-2])&quot;) )</errorConditionFormula>
    <errorDisplayField>Period_End__c</errorDisplayField>
    <errorMessage>Period End must be in YYYY-MM format (e.g., 2026-06).</errorMessage>
</ValidationRule>