force-app/main/default/objects/Agent_Payout__c/validationRules/Void_Requires_Note.validationRule-meta.xml
<ValidationRule>
    <fullName>Void_Requires_Note</fullName>
    <active>true</active>
    <description>Voiding a payout releases its lines back to unpaid, so the reason has to be written down.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Voided&quot;),
  ISBLANK(Notes__c)
)</errorConditionFormula>
    <errorDisplayField>Notes__c</errorDisplayField>
    <errorMessage>Enter a note explaining why this payout is being voided.</errorMessage>
</ValidationRule>