force-app/main/default/objects/Agent_Payout__c/listViews/This_Year.listView-meta.xml
<ListView>
    <fullName>This_Year</fullName>
    <columns>NAME</columns>
    <columns>Agent__c</columns>
    <columns>Period_Label__c</columns>
    <columns>Status__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Payable_Amount__c</columns>
    <columns>Lines_Net_Amount__c</columns>
    <columns>Line_Count__c</columns>
    <columns>Paid_Date__c</columns>
    <columns>Payment_Method__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Paid_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>Paid This Year</label>
</ListView>