force-app/main/default/objects/Agent_Payout__c/listViews/Voided.listView-meta.xml
<ListView>
    <fullName>Voided</fullName>
    <columns>NAME</columns>
    <columns>Agent__c</columns>
    <columns>Period_Label__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Paid_Date__c</columns>
    <columns>Notes__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Voided</value>
    </filters>
    <label>Voided</label>
</ListView>